# fast-walk

./: .gitignore  Cargo.toml  LICENSE  README.md  fast_walk.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  pydict.rs
tests/: benchmarks.py  manual.py  perf_driver.py  test_coherency.py  test_refcount.py
