[package]
name = "fast-walk"
version = "0.1.7"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/reflex-dev/fast-walk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_walk"
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true        # Link-time optimization.
codegen-units = 1 # Slower compilation but faster code. 

[dependencies]
fastset = "0.5.2"
pyo3 = "0.27.1"
