[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fast-walk"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "pyproject.toml" },
    { file = "fast_walk.pyi" },
    { file = "src/**/*.rs" },
]
